Thu Sep  1 14:24:16 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (gems): move dirty hacks for bundled gems from
	  mkmf.rb.

	* lib/mkmf.rb (create_makefile): yield all configuration strings.

Wed Aug 31 17:39:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (create_makefile): make gem.build_complete file
	  under TARGET_SO_DIR and install it only when the gem build
	  succeeded.  [ruby-core:77057] [Bug #12681]

Wed Aug 31 15:36:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: move TARGET_SO_DIR stuffs to mkmf.rb.

	* lib/mkmf.rb (create_makefile): create target shared object files
	  under $(TARGET_SO_DIR) which is $sodir if it is defined with
	  $extout.  [ruby-core:77058] [Bug #12681]

Wed Aug 31 01:56:55 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* doc/extension.ja.rdoc: [DOC] Fix a typo. [ci skip]

Wed Aug 31 00:52:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: make the gems target directory under the expanded
	  name.  [ruby-core:77102] [Bug #12714]

Tue Aug 30 15:27:27 2016  Kouhei Yanagita  <yanagi@shakenbu.org>

	* ext/json/lib/json/add/ostruct.rb (OpenStruct.json_create):
	  Correct documentation, fix the name of values.  [Fix GH-1421]

Tue Aug 30 14:53:34 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (nogvl_fsync, nogvl_fdatasync): on Windows, just ignore if the
	  fd is associated to non-disk device.  if call fsync and/or fdatasync
	  with such fds, it causes Errno::EBADF exception and the behavior is
	  incompatible with ruby 2.1 and earlier unintentionally introduced.

Tue Aug 30 03:38:35 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (backtrace): use rip in the saved context for the case
	  the SIGSEGV is received when the process is in userland.
	  Note that ip in the stack should be used if the signal is received
	  when it is in kernel (when it is calling syscall) [Bug #12711]

Sat Aug 27 10:26:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
